--- a/src/app/post-feed/post-feed.component.scss
+++ b/src/app/post-feed/post-feed.component.scss
@@ -1,8 +1,5 @@
 .post-feed {
-    margin: 20px 10px;
-    overflow-y: scroll;
     max-height: 100%;
-    padding-right: 6px;
 
     &__feed {
         list-style: none;
